--- a/artist-al.html
+++ b/artist-al.html
@@ -101,11 +101,11 @@
             <div class="">
             <br>
                 <h1>Al C.</h1>
-                <h2><img src="img/svg/icons/worldicon.svg"/> Poland English, Polish, Croatian</h2>
-                <h1>T-shirt Designer</h1>
+                <h2><img src="img/svg/icons/worldicon.svg"/> ...</h2>
+                <h1>Illustrator</h1>
                 <div id="" class="">
                 
-                   <p>Experienced Graphic Designer &amp; Illustrator. Over a period of 13 years, I was fortunate to collaborate with many Brands (ESET, Wornstar, Sav Tac, Spiral Direct...) Bands (Sabaton, Slayer, The Ramones...). and NFT's (Angry Pitbulls, Alien Rappers, Sleeping Sniper...) 
+                   <p>...
                     </p>
                 
                 </div>
