--- a/artist-victor.html
+++ b/artist-victor.html
@@ -101,11 +101,11 @@
             <div class="">
             <br>
                 <h1>Victor S.</h1>
-                <h2><img src="img/svg/icons/worldicon.svg"/> Poland English, Polish, Croatian</h2>
-                <h1>T-shirt Designer</h1>
+                <h2><img src="img/svg/icons/worldicon.svg"/> ...</h2>
+                <h1>Illustrator</h1>
                 <div id="" class="">
                 
-                   <p>Experienced Graphic Designer &amp; Illustrator. Over a period of 13 years, I was fortunate to collaborate with many Brands (ESET, Wornstar, Sav Tac, Spiral Direct...) Bands (Sabaton, Slayer, The Ramones...). and NFT's (Angry Pitbulls, Alien Rappers, Sleeping Sniper...) 
+                   <p>...
                     </p>
                 
                 </div>
@@ -170,14 +170,14 @@
                 <div class="gcard"><img src="img/crew/artGallery/damien/do-t-shirt-design-for-band-1.jpg"/></div>
                 <div class="gcard"><img src="img/crew/artGallery/damien/do-t-shirt-design-for-band.jpg"/></div>
             -->
-            <div class="gcard"><img src="img/crew/artGallery/damien/Knott's-Scary-Farm-BACK.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Drac%20Attack.jpg"/></div>
             <!--
             <div class="gcard"><img src="img/crew/artGallery/damien/Maracay.jpg"/></div>
             -->
-            <div class="gcard"><img src="img/crew/artGallery/damien/marrow.jpg"/></div>
-            <div class="gcard"><img src="img/crew/artGallery/damien/sabaton.jpg"/></div>
-            <div class="gcard"><img src="img/crew/artGallery/damien/livekill.jpg"/></div>
-            <div class="gcard"><img src="img/crew/artGallery/damien/murdermonday.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Funny%20Fiend.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Knott's-Tee.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_LOMB%20MERGED%20FB%20copy.png"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Shrunkin%20head.jpg"/></div>
 
         </div>
     <!--</div>-->
