--- a/artist-victor.html
+++ b/artist-victor.html
@@ -170,14 +170,14 @@
                 <div class="gcard"><img src="img/crew/artGallery/damien/do-t-shirt-design-for-band-1.jpg"/></div>
                 <div class="gcard"><img src="img/crew/artGallery/damien/do-t-shirt-design-for-band.jpg"/></div>
             -->
-            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Drac%20Attack.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/Bridal-Sweet.jpg"/></div>
             <!--
             <div class="gcard"><img src="img/crew/artGallery/damien/Maracay.jpg"/></div>
             -->
-            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Funny%20Fiend.jpg"/></div>
-            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Knott's-Tee.jpg"/></div>
-            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_LOMB%20MERGED%20FB%20copy.png"/></div>
-            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/_Shrunkin%20head.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/coffee-better-than-brains.JPG"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/Creech-Breech.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/Drac-Attack.jpg"/></div>
+            <div class="gcard"><img src="img/crew/artGallery/victorStrickland/frankenstein-monster.JPG"/></div>
 
         </div>
     <!--</div>-->
